--- a/templates/list-gen.html
+++ b/templates/list-gen.html
@@ -3,97 +3,105 @@
 
 <div class="content-wrapper" style="min-height: 1302.12px;">
 
-    <!-- Main content -->
-    <section class="content">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-12">
-            <div class="card">
-              <div class="card-header">
-                <h3 class="card-title">Defina como será gerado seus jogos</h3>
-              </div>
-             
-        <div class="alinha-cols">
-          <div class="aling-div">
-            <ul class="list-group">
-              <form action="/fillgen" method="post" enctype="multipart/form-data">
-                <label for="lname"><strong>Escolha suas Dezenas</strong></label>
-
-<div>
-    <div class="row">
-      <div class="col-sm-6">
-      <table id="example1" class="table table-bordered table-hover dataTable dtr-inline" role="grid" aria-describedby="example2_info">
-      <tbody>
-        {% for cont in table_listnum %}
-          <tr>
-            <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.0}}" value="{{cont.0}}"> {{cont.0}}</td>
-            <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.1}}" value="{{cont.1}}"> {{cont.1}}</td>
-            <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.2}}" value="{{cont.2}}"> {{cont.2}}</td>
-            <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.3}}" value="{{cont.3}}"> {{cont.3}}</td>
-            <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.4}}" value="{{cont.4}}"> {{cont.4}}</td>
-            <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.5}}" value="{{cont.5}}"> {{cont.5}}</td>
-            <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.6}}" value="{{cont.6}}"> {{cont.6}}</td>
-            <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.7}}" value="{{cont.7}}"> {{cont.7}}</td>
-            <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.8}}" value="{{cont.8}}"> {{cont.8}}</td>
-            <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.9}}" value="{{cont.9}}"> {{cont.9}}</td>
-          </tr>
-        {% endfor %}
-    </tbody>
-    </table>
-  </div>
-</div>
-
-<div class="form-group">
-  <div class="custom-control custom-switch">
-    <input type="checkbox" class="custom-control-input" id="customSwitch1" name="all">
-    <label class="custom-control-label" for="customSwitch1">Todas Dezanas</label>
-  </div>
-  <div class="custom-control custom-switch">
-    <input type="checkbox" class="custom-control-input" id="customSwitch2" name="mega">
-    <label class="custom-control-label" for="customSwitch2">MegaSena</label>
-  </div>
-  <div class="custom-control custom-switch">
-    <input type="checkbox" class="custom-control-input" id="customSwitch3" name="loto">
-    <label class="custom-control-label" for="customSwitch3">LotoFácil</label>
-  </div>
-</div>
-</div>
-
-                <label for="linha"><strong>Escolha a Quantidade de Linhas </strong></label><br>
-                <select id="linha" name="linha">
-                  <option value="numero-linha">-</option>
-                  {% for read in list_cont %}
-                    <option value="{{read}}">{{read}}</option>
-                  {% endfor %}
-                </select>
-                <br><br>
-                <div>
-                  <input type="submit" value="Gerar Jogos" id="alinha-button">
-                </div>
-              </form>
-            <ul>
-          </div>
-        </div>
-
-        </div>
-
-              <div class="aling-back" id="back-i">
-                <a href="/"><i class="fas fa-angle-double-left fa-2x"></i></a>
+  <!-- Main content -->
+  <section class="content">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-12">
+          <div class="card">
+            <div class="card-header">
+              <h3 class="card-title">Defina como será gerado seus jogos</h3>
             </div>
-            
-            <!-- /.card -->
+
+            <div class="alinha-cols">
+              <div class="aling-div">
+                <ul class="list-group">
+                  <form action="/fillgen" method="post" enctype="multipart/form-data">
+                    <label for="lname"><strong>Escolha suas Dezenas</strong></label>
+
+                    <div>
+                      <div class="row">
+                        <div class="col-sm-6">
+                          <table id="example1" class="table table-bordered table-hover dataTable dtr-inline" role="grid"
+                            aria-describedby="example2_info">
+                            <tbody>
+                              {% for cont in table_listnum %}
+                              <tr>
+                                <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.0}}"
+                                    value="{{cont.0}}"> {{cont.0}}</td>
+                                <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.1}}"
+                                    value="{{cont.1}}"> {{cont.1}}</td>
+                                <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.2}}"
+                                    value="{{cont.2}}"> {{cont.2}}</td>
+                                <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.3}}"
+                                    value="{{cont.3}}"> {{cont.3}}</td>
+                                <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.4}}"
+                                    value="{{cont.4}}"> {{cont.4}}</td>
+                                <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.5}}"
+                                    value="{{cont.5}}"> {{cont.5}}</td>
+                                <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.6}}"
+                                    value="{{cont.6}}"> {{cont.6}}</td>
+                                <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.7}}"
+                                    value="{{cont.7}}"> {{cont.7}}</td>
+                                <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.8}}"
+                                    value="{{cont.8}}"> {{cont.8}}</td>
+                                <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.9}}"
+                                    value="{{cont.9}}"> {{cont.9}}</td>
+                              </tr>
+                              {% endfor %}
+                            </tbody>
+                          </table>
+                        </div>
+                      </div>
+
+                      <div class="form-group">
+                        <div class="custom-control custom-switch">
+                          <input type="checkbox" class="custom-control-input" id="customSwitch1" name="all">
+                          <label class="custom-control-label" for="customSwitch1">Todas Dezanas</label>
+                        </div>
+                        <div class="custom-control custom-switch">
+                          <input type="checkbox" class="custom-control-input" id="customSwitch2" name="mega">
+                          <label class="custom-control-label" for="customSwitch2">MegaSena</label>
+                        </div>
+                        <div class="custom-control custom-switch">
+                          <input type="checkbox" class="custom-control-input" id="customSwitch3" name="loto">
+                          <label class="custom-control-label" for="customSwitch3">LotoFácil</label>
+                        </div>
+                      </div>
+                    </div>
+                    <label for="linha"><strong>Escolha a Quantidade de Linhas </strong></label><br>
+                    <select id="linha" name="linha">
+                      <option value="numero-linha">-</option>
+                      {% for read in list_cont %}
+                      <option value="{{read}}">{{read}}</option>
+                      {% endfor %}
+                    </select>
+                    <br><br>
+                    <div>
+                      <input type="submit" value="Gerar Jogos" id="alinha-button">
+                    </div>
+                  </form>
+                  <ul>
+              </div>
+            </div>
+
           </div>
-          <!-- /.col -->
+
+          <div class="aling-back" id="back-i">
+            <a href="/"><i class="fas fa-angle-double-left fa-2x"></i></a>
+          </div>
+
+          <!-- /.card -->
         </div>
-        <!-- /.row -->
+        <!-- /.col -->
       </div>
-      <!-- /.container-fluid -->
-    </section>
-    <!-- /.content -->
-  </div>
+      <!-- /.row -->
+    </div>
+    <!-- /.container-fluid -->
+  </section>
+  <!-- /.content -->
+</div>
 
 </div>
 
 {% endblock content %}
-
-
