--- a/templates/list-read-num-col.html
+++ b/templates/list-read-num-col.html
@@ -2,136 +2,171 @@
 {% block content %}
 
 <div class="content-wrapper" style="min-height: 1302.12px;">
-    <!-- Content Header (Page header) -->
-    <!-- Main content -->
-    <section class="content">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-12">
-            <div class="card">
-              <div class="card-header">
-                <h3 class="card-title">Jogo Realizado</h3>
-              </div>
-              <!-- /.card-header -->
-              <input type ="hidden" name="id_proj" value="{{proj_id}}">
-              <div class="card-body">
-                <div id="example2_wrapper" class="dataTables_wrapper dt-bootstrap4"><div class="row">
-                  <div class="col-sm-12 col-md-6">
-                </div><div class="col-sm-12 col-md-6"></div>
-              </div>
-              <div class="row">
-                <div class="col-sm-12">
-                <table id="example2" class="table table-bordered table-hover dataTable dtr-inline" role="grid" aria-describedby="example2_info">
-                  <thead>
-                  <tr role="row">
-                    <th class="sorting sorting_asc"></th>
-                    {% for cont in title_read %}
-                    <th class="sorting">COL_{{cont + 1}}</th>
-                    {% endfor %}
-                  </tr>
-                  </thead>
-                  <tbody>
-                    {% for num in read %}
-                      <tr class="odd">
-                        <td>-</td>
-                        {% for cont in title_read %}
-                        <td>{{num[cont]}}</td>
-                        {% endfor %}
-                      </tr>
-                    {% endfor %}
-                </tbody>
-                </table>
-              </div>
+  <!-- Content Header (Page header) -->
+  <!-- Main content -->
+  <section class="content">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-12">
+          <div class="card">
+            <div class="card-header">
+              <h3 class="card-title">Jogo Realizado</h3>
             </div>
-            <div class="row"><div class="col-sm-12 col-md-5">
-              <div class="dataTables_info" id="example2_info" role="status" aria-live="polite">Generated Games</div></div>
-              </ul></div>
+            <!-- /.card-header -->
+            <input type="hidden" name="id_proj" value="{{proj_id}}">
+            <div class="card-body">
+              <div id="example2_wrapper" class="dataTables_wrapper dt-bootstrap4">
+                <div class="row">
+                  <div class="col-sm-12 col-md-6">
+                  </div>
+                  <div class="col-sm-12 col-md-6"></div>
+                </div>
+                <div class="row">
+                  <div class="col-sm-12">
+                    <table id="example2" class="table table-bordered table-hover dataTable dtr-inline" role="grid"
+                      aria-describedby="example2_info">
+                      <thead>
+                        <tr role="row">
+                          <th class="sorting sorting_asc"></th>
+                          {% for cont in title_read %}
+                          <th class="sorting">COL_{{cont + 1}}</th>
+                          {% endfor %}
+                        </tr>
+                      </thead>
+                      <tbody>
+                        {% for num in read %}
+                        <tr class="odd">
+                          <td>-</td>
+                          {% for cont in title_read %}
+                          <td>{{num[cont]}}</td>
+                          {% endfor %}
+                        </tr>
+                        {% endfor %}
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-sm-12 col-md-5">
+                    <div class="dataTables_info" id="example2_info" role="status" aria-live="polite">Generated Games
+                    </div>
+                  </div>
+                  </ul>
+                </div>
               </div>
               <!-- /.card-body -->
             </div>
-        </div>
+          </div>
 
-        <div class="alinha-cols">
+          <div class="alinha-cols">
+            <div class="aling-div">
+              <ul class="list-group">
+                <form action="/fillgen_num" method="post" enctype="multipart/form-data">
+                  <label for="lname"><strong>Escolha suas Dezenas</strong></label>
+                  <div>
+                    <div class="row">
+                      <div class="col-sm-6">
+                        <table id="example1" class="table table-bordered table-hover dataTable dtr-inline" role="grid"
+                          aria-describedby="example2_info">
+
+                          <tbody>
+                            {% for cont in table_listnum %}
+                            <tr>
+                              <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.0}}"
+                                  value="{{cont.0}}"> {{cont.0}}</td>
+                              <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.1}}"
+                                  value="{{cont.1}}"> {{cont.1}}</td>
+                              <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.2}}"
+                                  value="{{cont.2}}"> {{cont.2}}</td>
+                              <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.3}}"
+                                  value="{{cont.3}}"> {{cont.3}}</td>
+                              <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.4}}"
+                                  value="{{cont.4}}"> {{cont.4}}</td>
+                              <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.5}}"
+                                  value="{{cont.5}}"> {{cont.5}}</td>
+                              <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.6}}"
+                                  value="{{cont.6}}"> {{cont.6}}</td>
+                              <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.7}}"
+                                  value="{{cont.7}}"> {{cont.7}}</td>
+                              <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.8}}"
+                                  value="{{cont.8}}"> {{cont.8}}</td>
+                              <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.9}}"
+                                  value="{{cont.9}}"> {{cont.9}}</td>
+                            </tr>
+                            {% endfor %}
+                          </tbody>
+                        </table>
+                      </div>
+                    </div>
+
+                    <div class="form-group">
+                      <div class="custom-control custom-switch">
+                        <input type="checkbox" class="custom-control-input" id="customSwitch1" name="all">
+                        <label class="custom-control-label" for="customSwitch1">Todas Dezanas</label>
+                      </div>
+                      <div class="custom-control custom-switch">
+                        <input type="checkbox" class="custom-control-input" id="customSwitch2" name="mega">
+                        <label class="custom-control-label" for="customSwitch2">MegaSena</label>
+                      </div>
+                      <div class="custom-control custom-switch">
+                        <input type="checkbox" class="custom-control-input" id="customSwitch3" name="loto">
+                        <label class="custom-control-label" for="customSwitch3">LotoFácil</label>
+                      </div>
+                    </div>
+
+                    <label for="coluna"><strong>Escolha a Quantidade de Colunas </strong></label><br>
+                    <select id="colina" name="coluna">
+                      <option value="0">0</option>
+                      {% for read in list_cont %}
+                      <option value="{{read}}">{{read}}</option>
+                      {% endfor %}
+                    </select>
+                    <br>
+                    <br>
+                    <label for="coluna-del"><strong>Deletar Colunas </strong></label><br>
+                    <select id="coluna-del" name="coluna-del">
+                      <option value="N">Não</option>
+                      <option value="S">Sim</option>
+                    </select>
+                    <br>
+                    <br>
+                    <div>
+
+                      <div>
+                        <input type="submit" value="Gerar Jogos" id="alinha-button">
+                      </div>
+
+                </form>
+                <ul>
+            </div>
+          </div>
+
           <div class="aling-div">
             <ul class="list-group">
-              <form action="/fillgen_num" method="post" enctype="multipart/form-data">
-                <label for="lname"><strong>Escolha suas Dezenas</strong></label>
-<div>
-    <div class="row">
-      <div class="col-sm-6">
-      <table id="example1" class="table table-bordered table-hover dataTable dtr-inline" role="grid" aria-describedby="example2_info">
-       
-      <tbody>
-        {% for cont in table_listnum %}
-          <tr>
-            <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.0}}" value="{{cont.0}}"> {{cont.0}}</td>
-            <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.1}}" value="{{cont.1}}"> {{cont.1}}</td>
-            <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.2}}" value="{{cont.2}}"> {{cont.2}}</td>
-            <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.3}}" value="{{cont.3}}"> {{cont.3}}</td>
-            <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.4}}" value="{{cont.4}}"> {{cont.4}}</td>
-            <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.5}}" value="{{cont.5}}"> {{cont.5}}</td>
-            <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.6}}" value="{{cont.6}}"> {{cont.6}}</td>
-            <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.7}}" value="{{cont.7}}"> {{cont.7}}</td>
-            <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.8}}" value="{{cont.8}}"> {{cont.8}}</td>
-            <td class="td-alin"><input type="checkbox" id="customCheckbox1" name="{{cont.9}}" value="{{cont.9}}"> {{cont.9}}</td>
-          </tr>
-        {% endfor %}
-    </tbody>
-    </table>
-  </div>
-</div>
-
-<div class="form-group">
-  <div class="custom-control custom-switch">
-    <input type="checkbox" class="custom-control-input" id="customSwitch1" name="all">
-    <label class="custom-control-label" for="customSwitch1">Todas Dezanas</label>
-  </div>
-  <div class="custom-control custom-switch">
-    <input type="checkbox" class="custom-control-input" id="customSwitch2" name="mega">
-    <label class="custom-control-label" for="customSwitch2">MegaSena</label>
-  </div>
-  <div class="custom-control custom-switch">
-    <input type="checkbox" class="custom-control-input" id="customSwitch3" name="loto">
-    <label class="custom-control-label" for="customSwitch3">LotoFácil</label>
-  </div>
-</div>
-</div>
-
-                <div>
-                  <input type="submit" value="Gerar Jogos" id="alinha-button">
-                </div>
-
-              </form>
-            <ul>
+              <li class="list-group-item"><a href="/download" class="link_thumb">
+                  <table class="table table-striped">
+                    <tr>
+                      <td><i class="far fa-clipboard fa-2x"></td>
+                      <td style="text-align: right;"><strong>Deseja gerar um Excel?</i></strong>
+                    </tr>
+                  </table>
+                </a></li>
+            </ul>
           </div>
-        </div>
 
-    <div class="aling-div">
-	  <ul class="list-group">
-		<li class="list-group-item"><a href="/download" class="link_thumb">
-		  <table class="table table-striped">
-			  <tr>
-				  <td><i class="far fa-clipboard fa-2x"></td>
-				  <td style="text-align: right;"><strong>Deseja gerar um Excel?</i></strong> 
-			  </tr>
-            </table>
-        </a></li>
-      </ul>
-        </div>
-
-              <div class="aling-back" id="back-i">
-                <a href="/"><i class="fas fa-angle-double-left fa-2x"></i></a>
-            </div>
-            
-            <!-- /.card -->
+          <div class="aling-back" id="back-i">
+            <a href="/"><i class="fas fa-angle-double-left fa-2x"></i></a>
           </div>
-          <!-- /.col -->
+
+          <!-- /.card -->
         </div>
-        <!-- /.row -->
+        <!-- /.col -->
       </div>
-      <!-- /.container-fluid -->
-    </section>
-    <!-- /.content -->
-  </div>
+      <!-- /.row -->
+    </div>
+    <!-- /.container-fluid -->
+  </section>
+  <!-- /.content -->
+</div>
 
 {% endblock content %}
