--- a/templates/list-read-num.html
+++ b/templates/list-read-num.html
@@ -43,6 +43,21 @@
                 </table>
               </div>
             </div>
+
+
+            <label for="linha"><strong>Escolha a Quantidade de Linhas </strong></label><br>
+            <select id="linha" name="linha">
+              <option value="numero-linha">-</option>
+              {% for read in list_cont %}
+                <option value="{{read}}">{{read}}</option>
+              {% endfor %}
+            </select>
+            <br><br>
+            <div>
+              <input type="submit" value="Gerar Jogos" id="alinha-button">
+            </div>
+
+
             <div class="row"><div class="col-sm-12 col-md-5">
               <div class="dataTables_info" id="example2_info" role="status" aria-live="polite">Generated Games</div></div>
               </ul></div>
